sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: missing arguments for method print in object Predef;
follow this method with `_' if you want to treat it as a partially applied function
    print fin
    ^AlgCocktailSort2:24: error: missing arguments for method print in object Predef;
follow this method with `_' if you want to treat it as a partially applied function
    print debut
    ^